SERVER-128473 [v7.0] Add advanceGeneration() to scope in $function (#55505)

GitOrigin-RevId: 90ddfa37b29657cba8e03c1d17611c17e65c635e