jstests/aggregation/expressions/expression_function.js
@@ -3,6 +3,7 @@
 "use strict";
 
 load('jstests/aggregation/extras/utils.js');
+load('jstests/libs/fixture_helpers.js');
 
 const coll = db.expression_function;
 coll.drop();
@@ -139,4 +140,43 @@ pipeline = [{
 }];
 assert.commandFailedWithCode(
     db.runCommand({aggregate: coll.getName(), pipeline: pipeline, cursor: {}}), 31266);
+
+// Test that retained BSON arguments are invalidated across $function invocations.
+// Requires a single JS scope processing both docs, so skip on mongos where docs may be split
+// across shards with independent scopes.
+if (FixtureHelpers.isSharded(coll)) {
+    jsTestLog(
+        "testBSONArgumentLifetime: skipping on sharded collection as it requires single JS scope");
+} else {
+    coll.drop();
+    assert.commandWorked(coll.insert({_id: 1, x: "first"}));
+    assert.commandWorked(coll.insert({_id: 2, x: "second"}));
+    assert.commandFailedWithCode(
+        db.runCommand({
+            aggregate: coll.getName(),
+            pipeline: [
+                {$sort: {_id: 1}},
+                {
+                    $project: {
+                        result: {
+                            $function: {
+                                body: function(arg) {
+                                    if (typeof globalThis.savedArg === "undefined") {
+                                        globalThis.savedArg = arg;
+                                        return "saved";
+                                    }
+                                    return globalThis.savedArg.x;
+                                },
+                                args: ["$$ROOT"],
+                                lang: "js",
+                            },
+                        },
+                    },
+                },
+            ],
+            cursor: {},
+        }),
+        ErrorCodes.BadValue,
+    );
+}
 })();
